tests/cases/should_pass/imports/file.hash
l := (a: i32, b: i32) => {

};
