tests/cases/should_fail/malformed_function_literal_arrow/case.hash
str_eq: (str, str) -> str = (a, b) = a == b;
